--- a/todo-list/index.html
+++ b/todo-list/index.html
@@ -4,32 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>투두리스트</title>
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div id="todolist">
-      <div class="main__title">
+      <div class="title">
         <h1>To do list</h1>
       </div>
 
-      <div class="input__section">
+      <div class="inputSection">
         <form>
           <div>
-            <input type="text" class="item" autofocus="true" />
+            <input
+              type="text"
+              class="item"
+              autofocus="true"
+              placeholder="할 일을 입력하세요"
+            />
           </div>
           <div>
-            <button type="button" class="input__button">
-              <i class="fas fa-plus-circle"></i>
-            </button>
+            <button type="button" class="inputBtn">+</button>
           </div>
         </form>
       </div>
 
-      <div class="item__list"></div>
+      <div class="itemList"></div>
     </div>
 
     <script src="main.js" defer></script>
