--- a/todo-list/index.html
+++ b/todo-list/index.html
@@ -17,7 +17,7 @@
           <div>
             <input
               type="text"
-              class="item"
+              class="inputItem"
               autofocus="true"
               placeholder="할 일을 입력하세요"
             />
@@ -30,7 +30,6 @@
 
       <div class="itemList"></div>
     </div>
-
     <script src="main.js" defer></script>
   </body>
 </html>
