fix: 버튼 클래스 네임 변경 feat: 대소문자 구분 및 문자열 내 공백 제거해서 비교 추가

--- a/todo-list/index.html
+++ b/todo-list/index.html
@@ -23,7 +23,7 @@
             />
           </div>
           <div>
-            <button type="button" class="inputBtn">+</button>
+            <button type="button" class="addBtn">+</button>
           </div>
         </form>
       </div>
